--- a/frontend-web/src/index.html
+++ b/frontend-web/src/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="utf-8">
-  <title>FrontendWeb</title>
+  <title>iLib - Administración</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="./assets/styles.css">
